Experimental support for minecraft 1.20.1, closes #252